libs/@local/graph/atlas/src/postgres/card/snapshots/hash_graph_atlas__postgres__card__examples__tests__statement_text.snap
---
source: libs/@local/graph/atlas/src/postgres/card/examples.rs
assertion_line: 882
expression: "example_statement(&axes, &types, &64, &256).sql"
---
WITH "relations" AS (SELECT "mapping"."ordinality", "mapping"."ontology_id"
FROM UNNEST(($1::uuid[])) WITH ORDINALITY AS "mapping"("ontology_id", "ordinality")
INNER JOIN "entity_type_inherits_from" AS "inherits"
  ON "inherits"."source_entity_type_ontology_id" = "mapping"."ontology_id"
INNER JOIN "ontology_ids" AS "root"
  ON "root"."ontology_id" = "inherits"."target_entity_type_ontology_id"
 AND "root"."base_url" = $4), "links" AS (SELECT "relations"."ordinality", "relations"."ontology_id" AS "relation_id", "temporal"."web_id" AS "web_id", "temporal"."entity_uuid" AS "entity_uuid"
FROM "relations"
INNER JOIN "entity_is_of_type" AS "is_of_type"
  ON "is_of_type"."entity_type_ontology_id" = "relations"."ontology_id"
 AND "is_of_type"."inheritance_depth" = 0
INNER JOIN "entity_temporal_metadata" AS "temporal"
  ON "temporal"."entity_edition_id" = "is_of_type"."entity_edition_id"
 AND "temporal"."draft_id" IS NULL
 AND "temporal"."transaction_time" @> $2::TIMESTAMPTZ
 AND "temporal"."decision_time" @> $3::TIMESTAMPTZ
INNER JOIN "entity_editions" AS "edition"
  ON "edition"."entity_edition_id" = "is_of_type"."entity_edition_id"
 AND NOT("edition"."archived")), "raw_examples" AS (SELECT "links"."ordinality", "links"."relation_id", "links"."web_id", "links"."entity_uuid", "left_edge"."target_web_id" AS "source_web_id", "left_edge"."target_entity_uuid" AS "source_entity_uuid", "right_edge"."target_web_id" AS "target_web_id", "right_edge"."target_entity_uuid" AS "target_entity_uuid", ("source_cache"."labels")[1] AS "source_label", ("target_cache"."labels")[1] AS "target_label", COALESCE((("source_cache"."base_urls")[1:"source_cache"."direct_types"])[1], $9) AS "source_direct_type", "source_cache"."base_urls" AS "source_type_closure", md5(concat_ws($8, "links"."relation_id", "links"."web_id", "links"."entity_uuid", "left_edge"."target_web_id", "left_edge"."target_entity_uuid", "right_edge"."target_web_id", "right_edge"."target_entity_uuid")) AS "stable_hash"
FROM "links"
INNER JOIN "entity_edge" AS "left_edge"
  ON "left_edge"."source_web_id" = "links"."web_id"
 AND "left_edge"."source_entity_uuid" = "links"."entity_uuid"
 AND "left_edge"."kind" = $5
 AND "left_edge"."direction" = $7
INNER JOIN "entity_edge" AS "right_edge"
  ON "right_edge"."source_web_id" = "links"."web_id"
 AND "right_edge"."source_entity_uuid" = "links"."entity_uuid"
 AND "right_edge"."kind" = $6
 AND "right_edge"."direction" = $7
INNER JOIN "entity_temporal_metadata" AS "source_meta"
  ON "source_meta"."web_id" = "left_edge"."target_web_id"
 AND "source_meta"."entity_uuid" = "left_edge"."target_entity_uuid"
 AND "source_meta"."draft_id" IS NULL
 AND "source_meta"."transaction_time" @> $2::TIMESTAMPTZ
 AND "source_meta"."decision_time" @> $3::TIMESTAMPTZ
INNER JOIN "entity_temporal_metadata" AS "target_meta"
  ON "target_meta"."web_id" = "right_edge"."target_web_id"
 AND "target_meta"."entity_uuid" = "right_edge"."target_entity_uuid"
 AND "target_meta"."draft_id" IS NULL
 AND "target_meta"."transaction_time" @> $2::TIMESTAMPTZ
 AND "target_meta"."decision_time" @> $3::TIMESTAMPTZ
INNER JOIN "entity_edition_cache" AS "source_cache"
  ON "source_cache"."entity_edition_id" = "source_meta"."entity_edition_id"
INNER JOIN "entity_edition_cache" AS "target_cache"
  ON "target_cache"."entity_edition_id" = "target_meta"."entity_edition_id"
WHERE (char_length(btrim(("source_cache"."labels")[1])) > 0) AND (char_length(btrim(("target_cache"."labels")[1])) > 0)), "scored_examples" AS (SELECT *, count(*) OVER (PARTITION BY "raw_examples"."ordinality", "raw_examples"."source_web_id", "raw_examples"."source_entity_uuid") AS "source_frequency", count(*) OVER (PARTITION BY "raw_examples"."ordinality", "raw_examples"."target_web_id", "raw_examples"."target_entity_uuid") AS "target_frequency", row_number() OVER (PARTITION BY "raw_examples"."ordinality", "raw_examples"."source_web_id", "raw_examples"."source_entity_uuid", "raw_examples"."target_web_id", "raw_examples"."target_entity_uuid" ORDER BY "raw_examples"."stable_hash" ASC) AS "pair_rank"
FROM "raw_examples"), "stratified_examples" AS (SELECT *, ln(1 + "scored_examples"."source_frequency") + ln(1 + "scored_examples"."target_frequency") AS "recognizability", row_number() OVER (PARTITION BY "scored_examples"."ordinality", "scored_examples"."source_direct_type" ORDER BY "scored_examples"."stable_hash" ASC) AS "subgroup_rank"
FROM "scored_examples"
WHERE "scored_examples"."pair_rank" = 1), "ranked_examples" AS (SELECT *, row_number() OVER (PARTITION BY "stratified_examples"."ordinality" ORDER BY "stratified_examples"."subgroup_rank" ASC, md5((("stratified_examples"."relation_id"::text) || $8 || "stratified_examples"."source_direct_type")) ASC, "stratified_examples"."recognizability" DESC, "stratified_examples"."stable_hash" ASC) AS "relation_rank"
FROM "stratified_examples"
WHERE "stratified_examples"."subgroup_rank" <= $10)
SELECT "ranked_examples"."ordinality", "ranked_examples"."web_id", "ranked_examples"."entity_uuid", "ranked_examples"."source_web_id", "ranked_examples"."source_entity_uuid", "ranked_examples"."target_web_id", "ranked_examples"."target_entity_uuid", "ranked_examples"."source_label", "ranked_examples"."target_label", "ranked_examples"."source_direct_type", "ranked_examples"."source_type_closure", "ranked_examples"."source_frequency", "ranked_examples"."target_frequency"
FROM "ranked_examples"
WHERE "ranked_examples"."relation_rank" <= $11
ORDER BY "ranked_examples"."ordinality" ASC, "ranked_examples"."relation_rank" ASC
